# docstring-agent

./: .docstring_gen_cache.json  .gitignore  README.md  config.toml  pyproject.toml  report.json
src/: cache.py  cli.py  config.py  enricher.py  llm.py  logger.py  models.py  parser.py  pipeline.py  walker.py  writer.py
src/audit/: auditor.py  models.py  pipeline.py  report.py  scorer.py
src/docstring_agent/: cache.py  cli.py  config.py  enricher.py  llm.py  logger.py  models.py  parser.py  pipeline.py  prompts.py  walker.py  writer.py
src/docstring_agent/audit/: __init__.py  auditor.py  models.py  pipeline.py  report.py  scorer.py
src/docstring_agent/generators/: heuristic.py  llm_gen.py  template.py
src/docstring_agent/repair/: __init__.py  models.py  reader.py
src/generators/: heuristic.py  llm_gen.py  template.py
src/repair/: executor.py  pipeline.py  planner.py  prompt_builder.py  reader.py  verifier.py
src/semantic/: __init__.py  action_extractor.py  models.py  purpose_extractor.py  purpose_models.py  purpose_synthesizer.py  scoring.py  synthesizer.py
tests/: conftest.py  test_auditor.py  test_enricher.py  test_generators.py  test_parser.py  test_report.py  test_scorer.py  test_walker.py  test_writer.py
tests/fixtures/: sample_complex.py  sample_no_docs.py  sample_with_docs.py
tests/semantic/: test_action_extractor.py  test_purpose_extractor.py  test_purpose_scorer.py  test_purpose_synthesizer.py  test_synthesizer.py
